<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="false">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/LIGHT_GRAY"
        android:orientation="vertical"
        android:tag="search">

        <!-- Offer Selector -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText"
            android:text="@string/offers_heading"
            style="@style/Scubit_Add_Heading" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/offers"
            android:layout_gravity="center_horizontal"
            android:spinnerMode="dropdown"
            android:layout_margin="10dp"
            android:dropDownWidth="match_parent"
            android:background="@color/LIGHT_GRAY"
            android:popupBackground="@color/LIGHT_GRAY" />

        <!-- Price Range Selector -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText2"
            android:text="@string/price_ranges_heading"
            style="@style/Scubit_Add_Heading"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/priceRanges"
            android:dividerHeight="10dp"
            android:spinnerMode="dropdown"
            android:layout_margin="10dp"
            android:dropDownWidth="match_parent" />

        <!-- Payment Method Selector -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText3"
            android:text="@string/payment_method_heading"
            style="@style/Scubit_Add_Heading" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/paymentTypes"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:dropDownWidth="match_parent"
            android:spinnerMode="dropdown" />

        <!-- Scubit Start Date and Time Selector -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/startDateTimeHeading"
            android:text="@string/start_date_time_heading"
            style="@style/Scubit_Add_Heading" />

        <LinearLayout android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:orientation="horizontal"
            android:weightSum="2">
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/startDate"
                android:layout_gravity="right"
                android:layout_margin="2dp"
                android:textColor="#468499" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/startTime"
                android:layout_margin="2dp"
                android:textColor="#468499" />
        </LinearLayout>

        <!-- Scubit End Date and Time Selector -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/endDateTimeHeading"
            android:text="@string/end_date_time_heading"
            style="@style/Scubit_Add_Heading" />

        <LinearLayout android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:orientation="horizontal"
            android:weightSum="2">

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/endDate"
                android:layout_gravity="right"
                android:layout_margin="2dp"
                android:textColor="#468499" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/endTime"
                android:layout_margin="2dp"
                android:textColor="#468499" />
        </LinearLayout>

        <!-- Mall Selector -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/mallNameHeading"
            android:text="@string/mall_name_heading"
            style="@style/Scubit_Add_Heading" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/mallNames"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:dropDownWidth="match_parent"
            android:spinnerMode="dropdown" />

        <!-- Shop Selector -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/shopNameHeading"
            android:text="@string/shop_name_heading"
            style="@style/Scubit_Add_Heading" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/shopNames"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:dropDownWidth="match_parent"
            android:spinnerMode="dropdown" />

        <!-- Brand Selector -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/brandNameHeading"
            android:text="@string/brand_name_heading"
            style="@style/Scubit_Add_Heading" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/brandNames"
            android:layout_margin="10dp"
            android:dropDownWidth="match_parent"
            android:spinnerMode="dropdown" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/addScubitButton"
            android:layout_gravity="center_horizontal"
            android:text="@string/scubit_button_add"
            android:focusable="true"
            android:padding="5dp"
            android:background="@color/scube_text"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="5dp"
            android:textAllCaps="true" />

    </LinearLayout>

</ScrollView>